Rename module/dist Filename-{,Type-}*

--- a/dist.ini
+++ b/dist.ini
@@ -1,9 +1,15 @@
+;---------------------------------
+author  = perlancar <perlancar@cpan.org>
+copyright_holder = perlancar <perlancar@cpan.org>
+license = Perl_5
+;---------------------------------
+
 version=0.001
 
-name=Filename-Ebook
+name=Filename-Type-Ebook
 
 [@Author::PERLANCAR]
-:version=0.600
+:version=0.610
 
 [Prereqs / TestRequires]
 Test::More=0.98
@@ -18,4 +24,3 @@ Exporter=5.57
 -phase=develop
 -relationship=x_spec
 Rinci=1.1.90
-
